--- a/eas.json
+++ b/eas.json
@@ -14,8 +14,9 @@
     "production": {
       "autoIncrement": true,
       "android": {
-        "buildType": "apk"
-      }
+        "buildType": "app-bundle"
+      },
+      "distribution": "store"
     }
   },
   "submit": {
