--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
-    "expo-secure-store": "^12.4.0"
+    "expo-secure-store": "^12.4.0",
+    "expo-dev-client": "~5.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
