--- a/eas.json
+++ b/eas.json
@@ -17,6 +17,11 @@
         "buildType": "app-bundle"
       },
       "distribution": "store"
+    },
+    "apk": {
+      "android": {
+        "buildType": "apk"
+      }
     }
   },
   "submit": {
